@@ -1,3 +1,10 @@
+2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
+	  Makefile.am, MonoDevelop.SourceEditor.mdp,
+	  MonoDevelop.SourceEditor/SourceEditorView.cs: Use new text markers
+	  defined in MD.Debugger. Properly fire LineCountChanged event.
+
 2008-06-26  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Don't add folding
